Fixed API method types for editing events/years. Event link button now opens the edit window if an event is linked instead of opening the link window. Unlinking an event from the API is now handled in the edit window instead of the link window. The user can now specify how it wants the website to believe it's ranking by. -- Note: this will cause issues with ranking numbers when not set according to the program's setting

--- a/ChronoKeep/UI/API/EditAPIPage1.xaml
+++ b/ChronoKeep/UI/API/EditAPIPage1.xaml
@@ -12,6 +12,7 @@
       Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       >
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2">
+        <Button Content="Unlink" Height="35" Width="120" HorizontalAlignment="Center" Margin="10,0,10,10" Click="Unlink_Click"/>
         <Button Content="Edit Event" Height="35" Width="120" HorizontalAlignment="Center" Margin="10,0,10,10" Click="Edit_Event_Click"/>
         <Button Content="Edit Year" Height="35" Width="120" HorizontalAlignment="Center" Margin="10,0,10,10" Click="Edit_Year_Click"/>
         <Button Content="Cancel" Height="35" Width="120" HorizontalAlignment="Center" Margin="10,0,10,10" Click="Cancel_Click"/>
