--- a/ChronoKeep/UI/MainPages/DashboardPage.xaml
+++ b/ChronoKeep/UI/MainPages/DashboardPage.xaml
@@ -157,7 +157,7 @@
                 Name="apiPageButton"
                 Content="Manage API"
                 Margin="0,0,0,5"
-                Click="apiPageButton_Click"
+                Click="ApiPageButton_Click"
                 FontSize="16"
                 VerticalContentAlignment="Center"
                 HorizontalAlignment="Stretch"
@@ -167,7 +167,7 @@
                 Name="apiLinkButton"
                 Content="Link to API Event"
                 Margin="0,5,0,5"
-                Click="apiLinkButton_Click"
+                Click="ApiLinkButton_Click"
                 FontSize="16"
                 VerticalContentAlignment="Center"
                 HorizontalAlignment="Stretch"
@@ -187,7 +187,7 @@
                 Name="registrationButton"
                 Content="Start Registration"
                 Margin="0,5,0,5"
-                Click="registrationButton_Click"
+                Click="RegistrationButton_Click"
                 FontSize="16"
                 VerticalContentAlignment="Center"
                 HorizontalAlignment="Stretch"
