--- a/ChronoKeep/UI/API/APIPage3.xaml
+++ b/ChronoKeep/UI/API/APIPage3.xaml
@@ -86,6 +86,26 @@
                         HorizontalAlignment="Stretch"
                         />
                 </DockPanel>
+                <DockPanel Margin="0,0,0,5">
+                    <TextBlock 
+                    Text="Rank By"
+                    FontSize="15"
+                    Width="60"
+                    VerticalAlignment="Center"
+                    TextAlignment="Right"
+                    Padding="0,0,5,0"
+                    />
+                    <ComboBox 
+                    Name="rankBox"
+                    FontSize="15"
+                    Width="220"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    >
+                        <ComboBoxItem Content="Clock" />
+                        <ComboBoxItem Content="Chip" />
+                    </ComboBox>
+                </DockPanel>
                 <ui:ToggleSwitch
                     x:Name="LiveBox"
                     Width="auto"
