--- a/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
+++ b/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
@@ -36,7 +36,7 @@
                     Content="Export"
                     FontSize="14" 
                     Height="35"
-                    Margin="10,0,10,0"
+                    Margin="10,0,10,5"
                     Click="Export_Click"
                     HorizontalAlignment="Stretch"
                     />
@@ -49,7 +49,7 @@
                         FontSize="16" 
                         VerticalAlignment="Center"
                         TextAlignment="Center"
-                        Margin="5,10,5,5"
+                        Margin="5,5,5,5"
                         Padding="0,0,0,0"
                         />
                     <Button 
@@ -80,13 +80,22 @@
                         HorizontalAlignment="Stretch"
                         />
                 </StackPanel>
+                <Button
+                    Name="ConflictsBtn"
+                    Content="Conflicts"
+                    FontSize="14" 
+                    Height="35"
+                    Margin="10,0,10,5"
+                    Click="ConflictsBtn_Click"
+                    HorizontalAlignment="Stretch"
+                    Visibility="Collapsed"
+                    />
                 <TextBlock
                     Text="View"
                     FontSize="16"
                     Margin="10,5"
                     TextAlignment="Center"
                     />
-                <DockPanel Name="DistanceBoxHolder" />
                 <ComboBox 
                     Name="DistanceBox"
                     FontSize="16"
