Fixed an issue where the Start Race button wouldn't be enabled after resetting the start time. Added margin to the conflicts window's listview.

--- a/ChronoKeep/UI/Participants/ParticipantConflicts.xaml
+++ b/ChronoKeep/UI/Participants/ParticipantConflicts.xaml
@@ -19,7 +19,7 @@
         </Grid.RowDefinitions>
         <ui:TitleBar Grid.Row="0">
         </ui:TitleBar>
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Margin="10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="*"/>
