The option to change the time display based upon Wave time now only shows when the event has started.

--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -41,7 +41,9 @@
                         Height="35"
                         HorizontalAlignment="Stretch"
                         SelectionChanged="EllapsedRelativeToBox_SelectionChanged"
-                        Visibility="Collapsed" >
+                        Visibility="Collapsed"
+                        IsEnabled="False"
+                    >
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel>
