--- a/ChronoKeep/UI/MainPages/DashboardPage.xaml
+++ b/ChronoKeep/UI/MainPages/DashboardPage.xaml
@@ -103,7 +103,7 @@
                     <DatePicker Name="eventDatePicker" FontSize="16" Margin="5,0,10,0" VerticalAlignment="Center" IsEnabled="False" />
                 </DockPanel>
                 <Separator Margin="5,5,5,5" />
-                <ui:ToggleSwitch Name="rankByGunCheckBox" Content="Rank By Gun Time" FontSize="16" Margin="10,5,10,5" VerticalContentAlignment="Center" IsEnabled="False"/>
+                <ui:ToggleSwitch Name="rankByGunCheckBox" Content="Rank By Clock Time" FontSize="16" Margin="10,5,10,5" VerticalContentAlignment="Center" IsEnabled="False"/>
                 <ui:ToggleSwitch Name="commonAgeCheckBox" Content="Common Age Groups for Distances" FontSize="16" Margin="10,5,10,5" VerticalContentAlignment="Center" IsEnabled="False"/>
                 <ui:ToggleSwitch Name="commonStartCheckBox" Content="Common Start/Finish Location" FontSize="16" Margin="10,5,10,5" VerticalContentAlignment="Center" IsEnabled="False"/>
                 <ui:ToggleSwitch Name="segmentCheckBox" Content="Distance Specific Segments" FontSize="16" Margin="10,5,10,5" VerticalContentAlignment="Center" IsEnabled="False"/>
