Fixed an issue where the division box would show when modifying participants via the timing page even though it wasn't enabled. Fixed an issue where upon opening the modify/add participants window would not select a gender by default. Fixed an issue where the otherGenderBox was accessed before the object was created.

--- a/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
@@ -47,7 +47,7 @@
             <DockPanel>
                 <TextBlock Text="Gender" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
                 <ComboBox Name="GenderBox" FontSize="16" Margin="0,5,15,5" Width="200" SelectionChanged="GenderBox_SelectionChanged">
-                    <ComboBoxItem Content="Not Specified"/>
+                    <ComboBoxItem Content="Not Specified" IsSelected="True"/>
                     <ComboBoxItem Content="Man"/>
                     <ComboBoxItem Content="Woman"/>
                     <ComboBoxItem Content="Non-Binary"/>
