Removed unused field from APIResult. Fixed an issue where the program would crash if you tried to edit a linked event that had results uploaded. Rank by type can now be specified as Cumulative/Elapsed when setting up Backyard Ultras through the Chronokeep API. Changing the event type box on the dashboard now changes the Rank by text instead of only changing when saved.

--- a/ChronoKeep/UI/API/EditYearPage.xaml
+++ b/ChronoKeep/UI/API/EditYearPage.xaml
@@ -69,7 +69,7 @@
             </DockPanel>
             <DockPanel Margin="0,0,0,5">
                 <TextBlock 
-                    Text="Rank By"
+                    Text="Rank by"
                     FontSize="15"
                     Width="60"
                     VerticalAlignment="Center"
@@ -82,10 +82,7 @@
                     Width="220"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Stretch"
-                    >
-                    <ComboBoxItem Content="Clock" />
-                    <ComboBoxItem Content="Chip" />
-                </ComboBox>
+                    />
             </DockPanel>
             <ui:ToggleSwitch
                 x:Name="LiveBox"
