--- a/ChronoKeep/UI/API/APIPage3.xaml
+++ b/ChronoKeep/UI/API/APIPage3.xaml
@@ -88,23 +88,20 @@
                 </DockPanel>
                 <DockPanel Margin="0,0,0,5">
                     <TextBlock 
-                    Text="Rank By"
-                    FontSize="15"
-                    Width="60"
-                    VerticalAlignment="Center"
-                    TextAlignment="Right"
-                    Padding="0,0,5,0"
-                    />
+                        Text="Rank by"
+                        FontSize="15"
+                        Width="60"
+                        VerticalAlignment="Center"
+                        TextAlignment="Right"
+                        Padding="0,0,5,0"
+                        />
                     <ComboBox 
-                    Name="rankBox"
-                    FontSize="15"
-                    Width="220"
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Stretch"
-                    >
-                        <ComboBoxItem Content="Clock" />
-                        <ComboBoxItem Content="Chip" />
-                    </ComboBox>
+                        Name="rankBox"
+                        FontSize="15"
+                        Width="220"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Stretch"
+                        />
                 </DockPanel>
                 <ui:ToggleSwitch
                     x:Name="LiveBox"
