Modify Participant window hides Other Gender textbox by default. 'All' count for assigned bibs no longer shows if there is only one distance with participants. The combobox for selecting which distance to view no longer is visible if there is only one distance with participants.

--- a/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
+++ b/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
@@ -90,18 +90,21 @@
                     HorizontalAlignment="Stretch"
                     Visibility="Collapsed"
                     />
-                <TextBlock
-                    Text="View"
-                    FontSize="16"
-                    Margin="10,5"
-                    TextAlignment="Center"
-                    />
-                <ComboBox 
-                    Name="DistanceBox"
-                    FontSize="16"
-                    Margin="10,0,10,0"
-                    SelectionChanged="DistanceBox_SelectionChanged"
-                    />
+                <StackPanel
+                    x:Name="ViewPanel">
+                    <TextBlock
+                        Text="View"
+                        FontSize="16"
+                        Margin="10,5"
+                        TextAlignment="Center"
+                        />
+                    <ComboBox 
+                        Name="DistanceBox"
+                        FontSize="16"
+                        Margin="10,0,10,0"
+                        SelectionChanged="DistanceBox_SelectionChanged"
+                        />
+                </StackPanel>
                 <TextBlock 
                     Text="Sort By"
                     FontSize="16"
