Modified Raw Data button to change to Refresh Data when on the Raw Reads page to allow the user to get new data while on that page. Fixed an issue with the edit raw reads window that wouldn't show the full text box for the days input.

--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -434,7 +434,8 @@
                                 <StackPanel 
                                     Grid.Column="1"
                                     >
-                                    <Button 
+                                    <Button
+                                        Name="RawButton"
                                         Content="Raw Data"
                                         Height="35"
                                         HorizontalAlignment="Stretch"
