--- a/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
@@ -28,7 +28,7 @@
                 <TextBox Name="BibBox" FontSize="16" Margin="0,5,15,5" Width="100" VerticalContentAlignment="Center" KeyDown="Box_KeyDown"/>
                 <ComboBox Name="DistanceBox" FontSize="16" Margin="0,5,15,5"/>
             </DockPanel>
-            <DockPanel x:Name="DivisionPanel" Visibility="Visible">
+            <DockPanel>
                 <TextBlock Text="Division" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
                 <TextBox Name="DivisionBox" Text="" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown"/>
             </DockPanel>
