Changed all user facing references of gun time to clock time . Modified the Box type for Chronokeep Portal and Remote Reader types for simplification purposes. Added Division to participant page and the participant export from said page. Anonymous users should no longer generate SMS alerts about their status. Division can be exported in the results now. The divisions selection box is now sorted and no longer contains an empty choice. Fixed an issue where the age was not showing for active participants on the stats page. Added Reader to raw reads page. Added changelog for next version.

--- a/ChronoKeep/IO/HtmlTemplates/Printables/AwardsPrintable.tt
+++ b/ChronoKeep/IO/HtmlTemplates/Printables/AwardsPrintable.tt
@@ -89,8 +89,8 @@
 							<td class="text-important table-label">Name</td>
 							<td class="text-important table-label">G</td>
 							<td class="text-important table-label">Age</td>
-							<td class="text-important table-label"><#= theEvent.EventType == Constants.Timing.EVENT_TYPE_TIME ? "Laps" : "Finish Gun" #></td>
-							<td class="text-important table-label"><#= theEvent.EventType == Constants.Timing.EVENT_TYPE_TIME ? "Time" : "Finish Chip" #></td>
+							<td class="text-important table-label"><#= theEvent.EventType == Constants.Timing.EVENT_TYPE_TIME ? "Laps" : "Finish (Clock)" #></td>
+							<td class="text-important table-label"><#= theEvent.EventType == Constants.Timing.EVENT_TYPE_TIME ? "Time" : "Finish (Chip)" #></td>
 						</tr>
 						<#
 						int place = 1;
