--- a/ChronoKeep/IO/HtmlTemplates/Printables/ResultsPrintableOverall.tt
+++ b/ChronoKeep/IO/HtmlTemplates/Printables/ResultsPrintableOverall.tt
@@ -85,8 +85,8 @@
 						<td class="text-important table-label">G</td>
 						<td class="text-important table-label">Age</td>
 						<td colspan='2' class="text-important table-label">AG Place</td>
-						<td class="text-important table-label"><#= theEvent.EventType == Constants.Timing.EVENT_TYPE_TIME ? "Laps" : "Finish Gun" #></td>
-						<td class="text-important table-label"><#= theEvent.EventType == Constants.Timing.EVENT_TYPE_TIME ? "Time" : "Finish Chip" #></td>
+						<td class="text-important table-label"><#= theEvent.EventType == Constants.Timing.EVENT_TYPE_TIME ? "Laps" : "Finish (Clock)" #></td>
+						<td class="text-important table-label"><#= theEvent.EventType == Constants.Timing.EVENT_TYPE_TIME ? "Time" : "Finish (Chip)" #></td>
 					</tr>
 					<# foreach (TimeResult r in distanceResults[d])
 					{ #>
