--- a/ChronoKeep/App.xaml
+++ b/ChronoKeep/App.xaml
@@ -41,26 +41,27 @@
                         <ControlTemplate>
                             <Border Margin="1" BorderBrush="#88A6A6A6" BorderThickness="1,1,1,1">
                                 <ui:CardExpander
-                                    FontSize="24"
                                     IsExpanded="{Binding IsExpanded}"
                                     ExpandDirection="Down"
                                     >
                                     <ui:CardExpander.Header>
-                                        <TextBlock Text="{Binding Version}" HorizontalAlignment="Center"/>
+                                        <TextBlock Text="{Binding Version}" FontSize="18" HorizontalAlignment="Left" Margin="20,-10,0,-10" FontWeight="DemiBold"/>
                                     </ui:CardExpander.Header>
-                                    <StackPanel>
-                                        <StackPanel Visibility="{Binding ChangesVisibility}">
-                                            <TextBlock Text="Changes" FontSize="24" HorizontalAlignment="Center" Margin="0,-10,0,10"/>
-                                            <ListView
+                                    <StackPanel HorizontalAlignment="Stretch">
+                                        <StackPanel Visibility="{Binding ChangesVisibility}" HorizontalAlignment="Stretch">
+                                            <TextBlock Text="Changes" HorizontalAlignment="Center" Margin="0,-8,0,2" FontWeight="DemiBold"/>
+                                            <ListView 
+                                                Margin="-14,0,-15,0"
                                                 ItemsSource="{Binding ChangesList}"
                                                 ItemContainerStyle="{DynamicResource NoFocusLogLine}"
                                                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                                                 PreviewMouseWheel="HandlePreviewMouseWheel"
                                                 />
                                         </StackPanel>
-                                        <StackPanel Visibility="{Binding FixesVisibility}">
-                                            <TextBlock Text="Fixes" FontSize="24" HorizontalAlignment="Center" Margin="0,8,0,10"/>
+                                        <StackPanel Visibility="{Binding FixesVisibility}" HorizontalAlignment="Stretch">
+                                            <TextBlock Text="Fixes" HorizontalAlignment="Center" Margin="0,5,0,2" FontWeight="DemiBold"/>
                                             <ListView
+                                                Margin="-14,0,-15,0"
                                                 ItemsSource="{Binding FixesList}"
                                                 ItemContainerStyle="{DynamicResource NoFocusLogLine}"
                                                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
@@ -79,14 +80,14 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate>
-                            <Border BorderBrush="#88A6A6A6" BorderThickness="0,1,0,0" Margin="0,0,0,2">
-                                <Grid>
+                            <Border BorderBrush="#88A6A6A6" BorderThickness="0,1,0,0" Padding="0,2,0,0">
+                                <Grid Margin="25,0,25,0">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto" />
                                         <ColumnDefinition Width="*" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBlock Grid.Column="0" FontSize="16" Text="•" TextWrapping="Wrap" VerticalAlignment="Top" TextAlignment="Right" Margin="0,0,5,0"/>
-                                    <TextBlock Grid.Column="1" FontSize="16" Text="{Binding}" TextWrapping="Wrap" VerticalAlignment="Center"/>
+                                    <TextBlock Grid.Column="0" Text="•" TextWrapping="Wrap" VerticalAlignment="Top" TextAlignment="Right" Margin="0,0,5,0"/>
+                                    <TextBlock Grid.Column="1" Text="{Binding}" TextWrapping="Wrap" VerticalAlignment="Center"/>
                                 </Grid>
                             </Border>
                         </ControlTemplate>
