--- a/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
+++ b/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
@@ -263,6 +263,7 @@
                         <ColumnDefinition Width="75" />   <!-- Gender -->
                         <ColumnDefinition Width="100" />  <!-- Birthday -->
                         <ColumnDefinition Width="150" />  <!-- Apparel -->
+                        <ColumnDefinition Width="150" />  <!-- Division -->
                         <ColumnDefinition Width="120" />  <!-- Phone -->
                         <ColumnDefinition Width="120" />  <!-- Mobile -->
                         <ColumnDefinition Width="150" />  <!-- EC Name -->
@@ -285,20 +286,21 @@
                     <TextBlock Grid.Column="4" Text="Gender" Margin="2"/>
                     <TextBlock Grid.Column="5" Text="Birthday" Margin="2"/>
                     <TextBlock Grid.Column="6" Text="Goodies" Margin="2"/>
-                    <TextBlock Grid.Column="7" Text="Phone" Margin="2"/>
-                    <TextBlock Grid.Column="8" Text="Mobile" Margin="2"/>
-                    <TextBlock Grid.Column="9" Text="EC Name" Margin="2"/>
-                    <TextBlock Grid.Column="10" Text="EC Phone" Margin="2"/>
-                    <TextBlock Grid.Column="11" Text="Anon" Margin="2"/>
-                    <TextBlock Grid.Column="12" Text="Comments" Margin="2"/>
-                    <TextBlock Grid.Column="13" Text="Other" Margin="2"/>
-                    <TextBlock Grid.Column="14" Text="Email" Margin="2"/>
-                    <TextBlock Grid.Column="15" Text="Street" Margin="2"/>
-                    <TextBlock Grid.Column="16" Text="Apt" Margin="2"/>
-                    <TextBlock Grid.Column="17" Text="City" Margin="2"/>
-                    <TextBlock Grid.Column="18" Text="State" Margin="2"/>
-                    <TextBlock Grid.Column="19" Text="Zip" Margin="2"/>
-                    <TextBlock Grid.Column="20" Text="Country" Margin="2"/>
+                    <TextBlock Grid.Column="7" Text="Division" Margin="2"/>
+                    <TextBlock Grid.Column="8" Text="Phone" Margin="2"/>
+                    <TextBlock Grid.Column="9" Text="Mobile" Margin="2"/>
+                    <TextBlock Grid.Column="10" Text="EC Name" Margin="2"/>
+                    <TextBlock Grid.Column="11" Text="EC Phone" Margin="2"/>
+                    <TextBlock Grid.Column="12" Text="Anon" Margin="2"/>
+                    <TextBlock Grid.Column="13" Text="Comments" Margin="2"/>
+                    <TextBlock Grid.Column="14" Text="Other" Margin="2"/>
+                    <TextBlock Grid.Column="15" Text="Email" Margin="2"/>
+                    <TextBlock Grid.Column="16" Text="Street" Margin="2"/>
+                    <TextBlock Grid.Column="17" Text="Apt" Margin="2"/>
+                    <TextBlock Grid.Column="18" Text="City" Margin="2"/>
+                    <TextBlock Grid.Column="19" Text="State" Margin="2"/>
+                    <TextBlock Grid.Column="20" Text="Zip" Margin="2"/>
+                    <TextBlock Grid.Column="21" Text="Country" Margin="2"/>
                 </Grid>
             </ScrollViewer>
             <ListView 
@@ -325,6 +327,7 @@
                                 <ColumnDefinition Width="75" />  <!-- Gender -->
                                 <ColumnDefinition Width="100" /> <!-- Birthday -->
                                 <ColumnDefinition Width="150" /> <!-- Apparel -->
+                                <ColumnDefinition Width="150" /> <!-- Division -->
                                 <ColumnDefinition Width="120" /> <!-- Phone -->
                                 <ColumnDefinition Width="120" /> <!-- Mobile -->
                                 <ColumnDefinition Width="150" /> <!-- EC Name -->
@@ -347,20 +350,21 @@
                             <TextBlock Grid.Column="4" Text="{Binding Gender}" Margin="2"/>
                             <TextBlock Grid.Column="5" Text="{Binding Birthdate}" Margin="2"/>
                             <TextBlock Grid.Column="6" Text="{Binding Apparel}" Margin="2"/>
-                            <TextBlock Grid.Column="7" Text="{Binding Phone}" Margin="2"/>
-                            <TextBlock Grid.Column="8" Text="{Binding Mobile}" Margin="2"/>
-                            <TextBlock Grid.Column="9" Text="{Binding ECName}" Margin="2"/>
-                            <TextBlock Grid.Column="10" Text="{Binding ECPhone}" Margin="2"/>
-                            <TextBlock Grid.Column="11" Text="{Binding PrettyAnonymous}" Margin="2"/>
-                            <TextBlock Grid.Column="12" Text="{Binding Comments}" Margin="2"/>
-                            <TextBlock Grid.Column="13" Text="{Binding Other}" Margin="2"/>
-                            <TextBlock Grid.Column="14" Text="{Binding Email}" Margin="2"/>
-                            <TextBlock Grid.Column="15" Text="{Binding Street}" Margin="2"/>
-                            <TextBlock Grid.Column="16" Text="{Binding Street2}" Margin="2"/>
-                            <TextBlock Grid.Column="17" Text="{Binding City}" Margin="2"/>
-                            <TextBlock Grid.Column="18" Text="{Binding State}" Margin="2"/>
-                            <TextBlock Grid.Column="19" Text="{Binding Zip}" Margin="2"/>
-                            <TextBlock Grid.Column="20" Text="{Binding Country}" Margin="2"/>
+                            <TextBlock Grid.Column="7" Text="{Binding Division}" Margin="2"/>
+                            <TextBlock Grid.Column="8" Text="{Binding Phone}" Margin="2"/>
+                            <TextBlock Grid.Column="9" Text="{Binding Mobile}" Margin="2"/>
+                            <TextBlock Grid.Column="10" Text="{Binding ECName}" Margin="2"/>
+                            <TextBlock Grid.Column="11" Text="{Binding ECPhone}" Margin="2"/>
+                            <TextBlock Grid.Column="12" Text="{Binding PrettyAnonymous}" Margin="2"/>
+                            <TextBlock Grid.Column="13" Text="{Binding Comments}" Margin="2"/>
+                            <TextBlock Grid.Column="14" Text="{Binding Other}" Margin="2"/>
+                            <TextBlock Grid.Column="15" Text="{Binding Email}" Margin="2"/>
+                            <TextBlock Grid.Column="16" Text="{Binding Street}" Margin="2"/>
+                            <TextBlock Grid.Column="17" Text="{Binding Street2}" Margin="2"/>
+                            <TextBlock Grid.Column="18" Text="{Binding City}" Margin="2"/>
+                            <TextBlock Grid.Column="19" Text="{Binding State}" Margin="2"/>
+                            <TextBlock Grid.Column="20" Text="{Binding Zip}" Margin="2"/>
+                            <TextBlock Grid.Column="21" Text="{Binding Country}" Margin="2"/>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
