Added Sentry integration to allow for crash report data to be uploaded automatically. Added error logging to a file in a sub-directory of the directory that the SQLite database is stored. Added crash logging to a file in a sub-directory of the directory that the SQLite database is stored. Modified log messages. Changed some error messages to debug messages and changed the wording of some error messages.

--- a/ChronoKeep/UI/MainPages/AboutPage.xaml
+++ b/ChronoKeep/UI/MainPages/AboutPage.xaml
@@ -145,6 +145,14 @@
                         <ui:SymbolIcon Symbol="Link24"/>
                     </ui:HyperlinkButton.Icon>
                 </ui:HyperlinkButton>
+                <ui:HyperlinkButton
+                    Content="Sentry"
+                    NavigateUri="https://sentry.io"
+                    >
+                    <ui:HyperlinkButton.Icon>
+                        <ui:SymbolIcon Symbol="Link24"/>
+                    </ui:HyperlinkButton.Icon>
+                </ui:HyperlinkButton>
             </StackPanel>
         </Grid>
         <TextBlock
