--- a/ChronoKeep/UI/MainPages/ChipAssigmentPage.xaml
+++ b/ChronoKeep/UI/MainPages/ChipAssigmentPage.xaml
@@ -24,7 +24,10 @@
             <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="20"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="5*"/>
+                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="2*"/>
                     <RowDefinition Height="55"/>
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0" Margin="4,0">
@@ -84,6 +87,49 @@
                         Grid.Row="0"
                         />
                 </Grid>
+                <TextBlock Grid.Row="3" Text="Ignored Chips" Margin="14,0" />
+                <ListView
+                    Name="ignoredChipList" 
+                    VerticalAlignment="Stretch"
+                    HorizontalAlignment="Stretch"
+                    SelectionMode="Extended"
+                    Grid.Row="4"
+                    AlternationCount="2"
+                    ItemContainerStyle="{StaticResource alternatingStyle}"
+                    ScrollViewer.CanContentScroll="True"
+                    >
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Margin="4,4" Text="{Binding Chip}"/>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <Grid Grid.Row="5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="130"/>
+                        <ColumnDefinition Width="110"/>
+                    </Grid.ColumnDefinitions>
+                    <Button
+                        Name="DeleteIgnored"
+                        Content="Delete Selected"
+                        Margin="0,5,5,5"
+                        FontSize="14"
+                        Height="35" 
+                        Grid.Column="0"
+                        Grid.Row="0"
+                        Click="DeleteIgnored_Click"
+                        />
+                    <Button 
+                        Name="ClearIgnored"
+                        Content="Delete All"
+                        Margin="5,5,10,5"
+                        FontSize="14"
+                        Height="35"
+                        Grid.Column="1"
+                        Grid.Row="0"
+                        Click="ClearIgnored_Click"
+                        />
+                </Grid>
             </Grid>
             <StackPanel Grid.Column="0">
                 <DockPanel HorizontalAlignment="Center">
@@ -97,7 +143,7 @@
                     <ComboBox
                         Name="ChipTypeBox" 
                         Width="100" 
-                        Margin="10" 
+                        Margin="10"
                         VerticalContentAlignment="Center" 
                         FontSize="16"
                         >
@@ -297,6 +343,39 @@
                             />
                     </StackPanel>
                 </Grid>
+                <StackPanel>
+                    <TextBlock
+                            Text="Add Ignored Chip"
+                            FontSize="20"
+                            Margin="10,5,10,5"
+                            HorizontalAlignment="Center"
+                            />
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <TextBlock
+                            Text="Bib"
+                            Margin="10,0,10,0"
+                            FontSize="16"
+                            Width="50"
+                            VerticalAlignment="Center"
+                            />
+                        <TextBox
+                            Width="150"
+                            Name="IgnoredChipBox"
+                            FontSize="16"
+                            Margin="5,5,5,5"
+                            KeyDown="KeyPressHandlerIgnored"
+                            GotFocus="SelectAll"
+                            VerticalAlignment="Center"
+                            />
+                        <Button
+                            Name="SaveIgnored"
+                            Content="Save Ignored"
+                            Width="150"
+                            VerticalAlignment="Center"
+                            Click="SaveIgnored_Click"
+                            />
+                    </StackPanel>
+                </StackPanel>
             </StackPanel>
         </Grid>
     </Grid>
