--- a/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
@@ -13,7 +13,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="55" />
+            <RowDefinition Height="50" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid.RowDefinitions>
@@ -40,8 +40,8 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="80"/>  <!-- Box -->
                                 <ColumnDefinition Width="80"/>  <!-- Location Name -->
-                                <ColumnDefinition Width="80"/>  <!-- Chip Number -->
-                                <ColumnDefinition Width="60"/>  <!-- Bib -->
+                                <ColumnDefinition Width="120"/> <!-- Chip Number -->
+                                <ColumnDefinition Width="70"/>  <!-- Bib -->
                                 <ColumnDefinition Width="140"/> <!-- Name -->
                                 <ColumnDefinition Width="170"/> <!-- Clock Time -->
                                 <ColumnDefinition Width="100"/> <!-- Net Time -->
@@ -73,8 +73,8 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="80"/>  <!-- Box -->
                         <ColumnDefinition Width="80"/>  <!-- Location Name -->
-                        <ColumnDefinition Width="80"/>  <!-- Chip Number -->
-                        <ColumnDefinition Width="60"/>  <!-- Bib -->
+                        <ColumnDefinition Width="120"/> <!-- Chip Number -->
+                        <ColumnDefinition Width="70"/>  <!-- Bib -->
                         <ColumnDefinition Width="140"/> <!-- Name -->
                         <ColumnDefinition Width="170"/> <!-- Clock Time -->
                         <ColumnDefinition Width="100"/> <!-- Net Time -->
@@ -94,14 +94,15 @@
             </ScrollViewer>
         </Grid>
         <DockPanel Grid.Row="1" LastChildFill="False" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <ui:ToggleSwitch x:Name="onlyIgnoreBox" Content="Ignored" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="16" Margin="5,5,5,5" Unchecked="OnlyIgnoreBox_Unchecked" Checked="OnlyIgnoreBox_Unchecked"/>
-            <ui:ToggleSwitch x:Name="onlyManualBox" Content="Manual" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="16" Margin="5,5,5,5" Unchecked="OnlyManualBox_Unchecked" Checked="OnlyManualBox_Unchecked"/>
-            <Button Name="DeleteButton" Content="Delete" Height="35" FontSize="16" Width="90" Margin="5,5,5,5" Click="DeleteButton_Click"/>
-            <Button Name="IgnoreButton" Content="Ignore" Height="35" FontSize="16" Width="90" Margin="5,5,5,5" Click="IgnoreButton_Click"/>
-            <Button Name="ChangeDNS" Content="Set DNS" Height="35" FontSize="16" Width="90" Margin="5,5,5,5" Click="ChangeDNS_Click"/>
-            <Button Name="ChangeDNF" Content="Set DNF" Height="35" FontSize="16" Width="90" Margin="5,5,5,5" Click="ChangeDNF_Click"/>
-            <Button Name="Shift" Content="Edit" Height="35" FontSize="16" Width="90" Margin="5,5,5,5" Click="Shift_Click" />
-            <Button Name="DoneButton" Content="Done" Height="35" FontSize="16" Width="90" Margin="5,5,5,5" Click="DoneButton_Click"/>
+            <ui:ToggleSwitch x:Name="onlyIgnoreBox" Content="Ignored" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" Margin="5,5,5,5" Unchecked="OnlyIgnoreBox_Unchecked" Checked="OnlyIgnoreBox_Unchecked"/>
+            <ui:ToggleSwitch x:Name="onlyManualBox" Content="Manual" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" Margin="5,5,5,5" Unchecked="OnlyManualBox_Unchecked" Checked="OnlyManualBox_Unchecked"/>
+            <Button Name="DeleteButton" Content="Delete" Height="35" FontSize="14" Margin="5,5,5,5" Click="DeleteButton_Click"/>
+            <Button Name="IgnoreButton" Content="Set Ignored" Height="35" FontSize="14" Margin="5,5,5,5" Click="IgnoreButton_Click"/>
+            <Button Name="ChangeDNS" Content="Set DNS" Height="35" FontSize="14" Margin="5,5,5,5" Click="ChangeDNS_Click"/>
+            <Button Name="ChangeDNF" Content="Set DNF" Height="35" FontSize="14" Margin="5,5,5,5" Click="ChangeDNF_Click"/>
+            <Button Name="Shift" Content="Edit" Height="35" FontSize="14" Margin="5,5,5,5" Click="Shift_Click" />
+            <Button Name="GlobalIgnore" Content="Ignore Chip" Height="35" FontSize="14" Margin="5,5,5,5" Click="GlobalIgnore_Click" />
+            <Button Name="DoneButton" Content="Done" Height="35" FontSize="14" Margin="5,5,5,5" Click="DoneButton_Click"/>
         </DockPanel>
     </Grid>
 </Page>
