--- a/ChronoKeep/UI/EventWindows/ChangeEventWindow.xaml
+++ b/ChronoKeep/UI/EventWindows/ChangeEventWindow.xaml
@@ -34,7 +34,7 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <ui:SymbolIcon Symbol="Search24" Grid.Column="0" Margin="20,0,10,10" VerticalAlignment="Center"/>
-                <ui:TextBox Height="40" Margin="5,0,15,15" Name="searchBox" TextChanged="searchBox_TextChanged" PlaceholderText="Search..." Grid.Column="1" />
+                <ui:TextBox Height="40" Margin="5,0,15,15" Name="searchBox" TextChanged="SearchBox_TextChanged" PlaceholderText="Search..." Grid.Column="1" />
             </Grid>
             <Grid Grid.Row="1" Margin="19,0,19,0">
                 <Grid.ColumnDefinitions>
@@ -55,7 +55,7 @@
                 Height="Auto"
                 AlternationCount="2"
                 ItemContainerStyle="{StaticResource alternatingStyle}"
-                MouseDoubleClick="eventList_MouseDoubleClick"
+                MouseDoubleClick="EventList_MouseDoubleClick"
                 >
                 <ListView.ItemTemplate>
                     <DataTemplate>
