Update NuGet packages. Removed some unnecessary extra StringBuilders in the hardware checker and made sure it trimmed some of the text being input. Made LongDate a calculated field instead of a set field because it wasn't being updated when the date changed for an event. Changed the Timer Clock display update to a slightly faster method of calculation. Updated the clock window. Updated methods for dealing with the clock.

--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -96,7 +96,7 @@
                         />
                     <Button
                         Name="OpenClock"
-                        Content="🕔"
+                        Content="🕒"
                         Width="45"
                         Height="35"
                         HorizontalAlignment="Center"
