--- a/ChronoKeep/UI/Timing/ClockControl.xaml
+++ b/ChronoKeep/UI/Timing/ClockControl.xaml
@@ -27,18 +27,17 @@
             x:Name="titleBar"
             Grid.Row="0">
         </ui:TitleBar>
-        <StackPanel Grid.Row="1" Width="1090">
+        <StackPanel Grid.Row="1">
             <ListView
                 x:Name="clockListView"
-                Height="400"
-                Margin="10,0,10,10"
+                Margin="25,0,25,10"
                 ItemContainerStyle="{DynamicResource NoFocusListViewItem}"
                 />
-            <Button x:Name="AddButton" Content="Add Clock" Click="AddButton_Click" Height="35" Width="150" HorizontalAlignment="Center" Margin="20,0,10,20" />
-            <TextBlock Name="CurrentTimeLabel" VerticalAlignment="Center" TextAlignment="Center" Text="" FontSize="14" Margin="10,5,10,5"/>
-            <TextBlock Name="TimeLabel" VerticalAlignment="Center" TextAlignment="Center" Text="" FontSize="14" Margin="10,5,10,5"/>
+            <TextBlock Name="CurrentTimeLabel" VerticalAlignment="Center" TextAlignment="Center" Text="" FontSize="14" Margin="10,0,10,5" Visibility="Collapsed"/>
+            <TextBlock Name="TimeLabel" VerticalAlignment="Center" TextAlignment="Center" Text="" FontSize="14" Margin="10,5,10,10" Visibility="Collapsed"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="CloseButton" Content="Close" Click="Close_Click" Height="35" Width="150" HorizontalAlignment="Center" Margin="20,0,10,20" />
+                <Button x:Name="AddButton" Content="Add Clock" Click="AddButton_Click" Height="35" Width="150" HorizontalAlignment="Center" Margin="0,0,5,10" />
+                <Button x:Name="CloseButton" Content="Close" Click="Close_Click" Height="35" Width="150" HorizontalAlignment="Center" Margin="5,0,0,10" />
             </StackPanel>
         </StackPanel>
     </Grid>
