More work on changing UI to AvaloniaUI.

--- a/ChronoKeep/UI/Parts/AgeGroupPart.axaml
+++ b/ChronoKeep/UI/Parts/AgeGroupPart.axaml
@@ -3,6 +3,39 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="AvaloniaApp.AgeGroupPart">
-  Welcome to Avalonia!
+             x:Class="Chronokeep.UI.Parts.AgeGroupPart">
+    <Grid MaxWidth="400">
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="*"/>
+			<ColumnDefinition Width="*"/>
+			<ColumnDefinition Width="55"/>
+        </Grid.ColumnDefinitions>
+        <TextBox Grid.Column="0"
+                 Name="StartAge"
+                 GotFocus="SelectAll"
+                 TextInput="NumberValidation"
+                 Margin="5"
+                 FontSize="16"
+                 VerticalAlignment="Center"
+                 VerticalContentAlignment="Center"/>
+        <TextBox Grid.Column="1"
+                 Name="EndAge"
+                 GotFocus="SelectAll"
+                 TextInput="NumberValidation"
+                 Margin="5"
+                 FontSize="16"
+                 VerticalAlignment="Center"
+                 VerticalContentAlignment="Center"/>
+        <Button Grid.Column="2"
+                Click="Remove_Click"
+                Width="35"
+                Height="35"
+                Margin="5"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"
+                VerticalContentAlignment="Center"
+                HorizontalContentAlignment="Center">
+            <PathIcon Data="{StaticResource delete_regular}"/>
+        </Button>
+    </Grid>
 </UserControl>
