--- a/ChronoKeep/UI/MinWindow.axaml
+++ b/ChronoKeep/UI/MinWindow.axaml
@@ -3,7 +3,47 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="AvaloniaApp.MinWindow"
-        Title="MinWindow">
-  Welcome to Avalonia!
+        x:Class="Chronokeep.UI.MinWindow"
+        TransparencyLevelHint="Mica,AcrylicBlur"
+        Background="{DynamicResource SecondaryBackground}"
+        ExtendClientAreaToDecorationsHint="True"
+        ExtendClientAreaChromeHints="PreferSystemChrome"
+        ExtendClientAreaTitleBarHeightHint="-1"
+        WindowStartupLocation="CenterScreen"
+        Title="Chronokeep"
+        Height="700"
+        Width="1320"
+        MinHeight="600"
+        MinWidth="800"
+        Closing="Window_Closing"
+        Loaded="Window_Loaded">
+    <StackPanel>
+		<Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="1"
+                    Name="newEvent"
+                    Content="New Event"
+                    Click="NewEvent_Click"
+                    Height="40"
+                    FontSize="16"
+                    Margin="15,10,15,10"
+                    HorizontalAlignment="Stretch"
+                    VerticalContentAlignment="Center"/>
+            <Button Grid.Column="2"
+                    Name="changeEvent"
+                    Content="Change Event"
+                    Click="ChangeEvent_Click"
+                    Height="40"
+                    FontSize="16"
+                    Margin="15,10,15,10"
+                    HorizontalAlignment="Stretch"
+                    VerticalContentAlignment="Center"/>
+        </Grid>
+        <UserControl Name="TheFrame" Margin="6" CornerRadius="8"/>
+    </StackPanel>
 </Window>
