--- a/ChronoKeep/UI/Parts/AlarmPart.axaml
+++ b/ChronoKeep/UI/Parts/AlarmPart.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="AvaloniaApp.AlarmPart"
+             x:Class="Chronokeep.UI.Parts.AlarmPart"
              IsTabStop="False">
     <Grid HorizontalAlignment="Center"
           VerticalAlignment="Center">
