--- a/ChronoKeep/UI/Parts/SegmentPart.axaml
+++ b/ChronoKeep/UI/Parts/SegmentPart.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="1150" d:DesignHeight="450"
-             x:Class="AvaloniaApp.SegmentPart">
+             x:Class="Chronokeep.UI.Parts.SegmentPart">
     <UserControl.Styles>
 		<Style Selector="TextBlock">
             <Setter Property="Margin" Value="2,5,2,2"/>
