--- a/ChronoKeep/UI/Timing/Windows/ManualEntryWindow.axaml
+++ b/ChronoKeep/UI/Timing/Windows/ManualEntryWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="300" d:DesignHeight="345"
-        x:Class="AvaloniaApp.ManualEntryWindow"
+        x:Class="Chronokeep.UI.Timing.Windows.ManualEntryWindow"
         ExtendClientAreaToDecorationsHint="True"
         ExtendClientAreaTitleBarHeightHint="-1"
         ExtendClientAreaChromeHints="PreferSystemChrome"
